--- a/Plotting.Rmd
+++ b/Plotting.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r echo = FALSE}
 
 library(tidyverse)
+library(scales)
 
 ```
 
@@ -125,97 +126,48 @@ ggplot(aes(Measurement, Concentration, fill=MinMax)) +
 
 ```
 
-```
-
-
-Going to work on ion stuff here.
-
-Seawater salinity = 35,000 ppm
-```{r}
-
-
-DATA %>% 
-  filter(Measurement %in% c("CaCO3","Ca2+", "NaHCO3", "NaCl", "KCl", "Cl-", "K+", "Na+", "MgCl2")) %>%
-  ggplot(aes(x = Measurement, y = Min_Concentration_ppm))+
-  geom_boxplot()+
-  theme_classic()
-
-
-DATA %>% 
-  filter(Measurement %in% c("CaCO3","Ca2+", "NaHCO3", "NaCl", "KCl", "Cl-", "K+", "Na+", "MgCl2")) %>%
-  ggplot(aes(x = Measurement, y = Max_Concentration_ppm))+
-  geom_violin(aes(colour = "#1268FF"), alpha = 0.5)+
-  geom_violin(aes(y = Min_Concentration_ppm, colour = "#3268FF"), alpha = 0.5)+
-  geom_jitter(height = 0.1, width = 0.2, alpha = 0.1)+
-  scale_y_continuous(trans='log10')+
-  theme_classic()
-
-#length(DATA$Measurement[DATA$Measurement == "HCO3-"])                                     
-                                           
-unique(DATA$Measurement)
-
-
-```
-
 
 
 ```{r}
 
-#Lets remove extreme values for now
 
-DATA %>% 
-  filter(Measurement %in% c("Specific Conductance","Salinity", "Total Dissolved Solids")) %>%
-  mutate(Min_Conductivity_uScm = ifelse(Min_Conductivity_uScm > 10000, NA, Min_Conductivity_uScm),
-              Max_Conductivity_uScm = ifelse(Max_Conductivity_uScm > 60000, NA, Max_Conductivity_uScm))%>%
-  ggplot(aes(x = Measurement, y = Max_Conductivity_uScm))+
-  geom_violin(aes(fill = "#1268FF"), alpha = 0.4)+
-  geom_violin(aes(y = Min_Conductivity_uScm, fill = "#3268FF"), alpha = 0.4)+
-  geom_jitter(height = 0.1, width = 0.3, alpha = 0.1)+
-  scale_y_continuous(trans='log10')+
-  theme_classic()
-
-#Without extreme values removed
-DATA %>% 
+condtaxa<-DATA %>% 
   filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
-  ggplot(aes(x = Taxonomic_classification, y = Max_Conductivity_uScm))+
-  geom_violin(aes(fill = "#1268FF"), alpha = 0.3)+
-  geom_violin(aes(y = Min_Conductivity_uScm, fill = "#3268FF"), alpha = 0.3)+
-  geom_jitter(height = 0, width = 0.3, alpha = 0.1)+
-  scale_y_continuous(trans='log10')+
-  theme_classic()
-  
-
-
-```
-
-
-```{r}
-
-unique(DATA$Taxonomic_classification)
-unique(DATA$study_location)
-unique(DATA$Measurement)
-
-DATA$Taxonomic_classification <- ifelse(DATA$Taxonomic_classification %in% c("mollusca", "Mollusca", "moluska"), "Mollusca", DATA$Taxonomic_classification)
-
-DATA$study_location <- ifelse(DATA$study_location %in% c("Field", "field", "Fied"), "Field", DATA$study_location)
-DATA$study_location <- ifelse(DATA$study_location %in% c("Lab", "lab"), "Lab", DATA$study_location)
-
-cond_ranges<-DATA %>%
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
   filter(!is.na(Max_Conductivity_uScm)) %>%
   filter(!is.na(Min_Conductivity_uScm)) %>%
-  group_by(Taxonomic_classification, study_location) %>%
-  summarise(min = min(Min_Conductivity_uScm), max = max(Max_Conductivity_uScm))
-  
-ion_ranges<-DATA %>%
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  mutate(Min_Conductivity_uScm = ifelse(Min_Conductivity_uScm < 1, 1, Min_Conductivity_uScm)) %>%
+  ggplot(aes(x = Taxonomic_classification, y = Max_Conductivity_uScm))+  theme_classic() +
+  scale_y_log10(limits = c(1,1000000),
+                breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
+                labels = trans_format("log10", math_format(10^.x)))+ 
+  geom_violin(aes(fill= "orange"), alpha = 0.3)+
+  geom_violin(aes(y = Min_Conductivity_uScm, fill = "blue"), alpha = 0.3)+
+  labs(x="Taxonomic Classification",y="Specific Conductance (uS/cm)")+
+  theme(axis.text.x = element_text(size=8,color="black"),
+        axis.title.x = element_text(size=14,color="black"),
+        axis.text.y = element_text(size=10,color="black"),
+        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+  ggsave("condtaxa.tiff",condtaxa,width=6.5,height=3.3,units="in",dpi=600)
+
+
+iontaxa<-DATA %>% 
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
   filter(!is.na(Max_Concentration_ppm)) %>%
   filter(!is.na(Min_Concentration_ppm)) %>%
-  group_by(study_location, Taxonomic_classification) %>%
-  summarise(min = min(Min_Concentration_ppm), max = max(Max_Concentration_ppm))
-  
-  write_csv(cond_ranges, file = "cond_ranges.csv")
-  write_csv(ion_ranges, file = "ion_ranges.csv")
+  mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
+  ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
+  scale_y_log10(limits = c(1,1000000),
+                breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
+                labels = trans_format("log10", math_format(10^.x)))+ 
+  geom_violin(aes(fill= "orange"), alpha = 0.3)+
+  geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
+  labs(x="Taxonomic Classification",y="Ion or Salt Concentration (ppm)")+
+  theme(axis.text.x = element_text(size=8,color="black"),
+        axis.title.x = element_text(size=14,color="black"),
+        axis.text.y = element_text(size=10,color="black"),
+        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+  ggsave("iontaxa.tiff",iontaxa,width=6.5,height=3.3,units="in",dpi=600)
+
 
 ```
 
