--- a/Plotting.Rmd
+++ b/Plotting.Rmd
@@ -225,9 +225,11 @@ ggplot(aes(Measurement, Concentration, fill=MinMax)) +
 
 ```{r}
 
+my.labels <- c("Amphibian","Crustacean", "Fish", "Insect", "Mollusca", "Non-Insect\nNon-Arthropod", "Zooplankton") # first create labels, add \n where appropriate.
+
 
 condtaxa<-DATA %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
   filter(!is.na(Max_Conductivity_uScm)) %>%
   filter(!is.na(Min_Conductivity_uScm)) %>%
   mutate(Min_Conductivity_uScm = ifelse(Min_Conductivity_uScm < 1, 1, Min_Conductivity_uScm)) %>%
@@ -237,17 +239,18 @@ condtaxa<-DATA %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Conductivity_uScm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Specific Conductance (uS/cm)")+
-  theme(axis.text.x = element_text(size=8,color="black"),
+  labs(x="Taxonomic Group",y="Specific Conductance (uS/cm)")+ 
+    scale_x_discrete(labels= my.labels)+
+  theme(axis.text.x = element_text(size=10,color="black"),
         axis.title.x = element_text(size=14,color="black"),
         axis.text.y = element_text(size=10,color="black"),
         axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
 condtaxa
-  #ggsave("condtaxa.tiff",condtaxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("condtaxa.png",condtaxa,width=6.5,height=3.3,units="in",dpi=300)
 
 
 iontaxa<-DATA %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
   filter(!is.na(Max_Concentration_ppm)) %>%
   filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
@@ -301,7 +304,9 @@ Sulfate<-DATA %>%
 #Sodium by Taxa Boxplot
 
 Sodium.taxa<-Sodium %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
@@ -309,39 +314,57 @@ Sodium.taxa<-Sodium %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(element_blank(),
-        element_blank(),
+  labs(title= expression('Na'^'+'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_blank(),
+        axis.title.x = element_blank(),
         axis.text.y = element_text(size=10,color="black"),
-        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+        axis.title.y = element_blank())+theme(legend.position="none")
 Sodium.taxa
-  #ggsave("Sodiumtaxa.tiff",Sodium.taxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("Sodiumtaxa1.tiff",Sodium.taxa,width=3.25,height=2.83,units="in",dpi=300)
 
 
 #Potassium by Taxa Boxplot
 
-Potassium.taxa<-Potassium %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+Potassium2<-read.csv("Potassium.csv")
+Potassium_dumby<-read.csv("Potassium_dumby.csv")
+
+Potassium3<-bind_rows(Potassium_dumby, Potassium2)
+
+Potassium.taxa<-Potassium3 %>% 
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
+  mutate(Max_Concentration_ppm = ifelse(Max_Concentration_ppm < 1, 1, Max_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
                 breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(axis.text.x = element_blank(),
+  labs(title= expression('K'^'+'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_blank(),
         axis.title.x = element_blank(),
-        axis.text.y = element_blank(),
+        axis.text.y = element_text(size=10,color="black"),
         axis.title.y = element_blank())+theme(legend.position="none")
 Potassium.taxa
-  #ggsave("Postassiumtaxa.tiff",Potassium.taxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("Postassiumtaxa1.tiff",Potassium.taxa,width=3.25,height=2.83,units="in",dpi=300)
 
 
 #Calcium by Taxa Boxplot
 
 Calcium.taxa<-Calcium %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
@@ -349,19 +372,25 @@ Calcium.taxa<-Calcium %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(element_blank(),
-        element_blank(),
+  labs(title= expression('Ca'^'2+'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_blank(),
+        axis.title.x = element_blank(),
         axis.text.y = element_text(size=10,color="black"),
-        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+        axis.title.y = element_blank())+theme(legend.position="none")
 Calcium.taxa
-  #ggsave("Calciumtaxa.tiff",Calcium.taxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("Calciumtaxa1.tiff",Calcium.taxa,width=3.25,height=2.83,units="in",dpi=300)
 
 
 #Magnesium by Taxa Boxplot
 
 Magnesium.taxa<-Magnesium %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
@@ -369,19 +398,25 @@ Magnesium.taxa<-Magnesium %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(axis.text.x = element_blank(),
+  labs(title= expression('Mg'^'2+'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_blank(),
         axis.title.x = element_blank(),
-        axis.text.y = element_blank(),
+        axis.text.y = element_text(size=10,color="black"),
         axis.title.y = element_blank())+theme(legend.position="none")
 Magnesium.taxa
-  #ggsave("Magnesiumtaxa.tiff",Magnesium.taxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("Magnesiumtaxa1.tiff",Magnesium.taxa,width=3.25,height=2.83,units="in",dpi=300)
 
 
 #Chloride by Taxa Boxplot
 
 Chloride.taxa<-Chloride %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
@@ -389,19 +424,25 @@ Chloride.taxa<-Chloride %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(axis.text.x = element_text(size=8,color="black"),
-        axis.title.x = element_text(size=14,color="black"),
+  labs(title= expression('Cl'^'-'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_text(size=8,color="black"),
+        axis.title.x = element_blank(),
         axis.text.y = element_text(size=10,color="black"),
-        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+        axis.title.y = element_blank())+theme(legend.position="none")
 Chloride.taxa
-  #ggsave("Chloridetaxa.tiff",Chloride.taxa,width=6.5,height=3.3,units="in",dpi=600)
+  ggsave("Chloridetaxa1.tiff",Chloride.taxa,width=3.25,height=3.34,units="in",dpi=300)
 
 
 #Sulfate by Taxa Boxplot
 
 Sulfate.taxa<-Sulfate %>% 
-  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
+  filter(!is.na(Max_Concentration_ppm)) %>%
+  filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
   ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
@@ -409,14 +450,17 @@ Sulfate.taxa<-Sulfate %>%
                 labels = trans_format("log10", math_format(10^.x)))+ 
   geom_violin(aes(fill= "orange"), alpha = 0.3)+
   geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
-  labs(x="Taxonomic Classification",y="Ion Concentration (ppm)")+
-  theme(axis.text.x = element_text(size=8,color="black"),
-        axis.title.x = element_text(size=14,color="black"),
+  labs(title= expression('SO'[4]^'2-'), 
+       x="Taxonomic Classification",
+       y="Ion Concentration (ppm)")+
+  scale_x_discrete(labels= my.labels)+
+  theme(title = element_text(size=8,color="black"),
+        axis.text.x = element_text(size=8,color="black"),
+        axis.title.x = element_blank(),
         axis.text.y = element_text(size=10,color="black"),
-        axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
+        axis.title.y = element_blank())+theme(legend.position="none")
 Sulfate.taxa
-  #ggsave("Sulfatetaxa.tiff",Sulfate.taxa,width=6.5,height=3.3,units="in",dpi=600)
-
+  ggsave("Sulfatetaxa1.tiff",Sulfate.taxa,width=3.25,height=3.34,units="in",dpi=300)
 
 
 ```
