--- a/Plotting.Rmd
+++ b/Plotting.Rmd
@@ -227,18 +227,26 @@ ggplot(aes(Measurement, Concentration, fill=MinMax)) +
 
 my.labels <- c("Amphibian","Crustacean", "Fish", "Insect", "Mollusca", "Non-Insect\nNon-Arthropod", "Zooplankton") # first create labels, add \n where appropriate.
 
+insect<-subset(DATA, Taxonomic_classification=="Insect")
+
+insect %>%
+  mutate(Min_Conductivity_uScm = ifelse(Min_Conductivity_uScm < 1, 1, Min_Conductivity_uScm)) %>%
+  ggplot(aes(x=Min_Conductivity_uScm))+scale_x_log10(limits = c(1,1000000),
+                breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
+                labels = trans_format("log10", math_format(10^.x)))+geom_histogram()+
+  geom_histogram(aes(x = Max_Conductivity_uScm, fill = "blue"),alpha = 0.3)
 
 condtaxa<-DATA %>% 
   filter(Taxonomic_classification %in% c("amphibian","Crustacean", "Fish", "Insect", "Mollusca", "non-insect, non-arthropod", "Zooplankton")) %>%
-  filter(!is.na(Max_Conductivity_uScm)) %>%
-  filter(!is.na(Min_Conductivity_uScm)) %>%
+  #filter(!is.na(Max_Conductivity_uScm)) %>%
+  #filter(!is.na(Min_Conductivity_uScm)) %>%
   mutate(Min_Conductivity_uScm = ifelse(Min_Conductivity_uScm < 1, 1, Min_Conductivity_uScm)) %>%
-  ggplot(aes(x = Taxonomic_classification, y = Max_Conductivity_uScm))+  theme_classic() +
+  ggplot(aes(x = Taxonomic_classification, y = Min_Conductivity_uScm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
                 breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
                 labels = trans_format("log10", math_format(10^.x)))+ 
-  geom_violin(aes(fill= "orange"), alpha = 0.3)+
-  geom_violin(aes(y = Min_Conductivity_uScm, fill = "blue"), alpha = 0.3)+
+  geom_violin(aes(fill= "orange"), alpha = 0.3, scale="count", width=2)+
+  geom_violin(aes(y = Max_Conductivity_uScm, fill = "blue"), alpha = 0.3, scale="count", width=2)+
   labs(x="Taxonomic Group",y="Specific Conductance (uS/cm)")+ 
     scale_x_discrete(labels= my.labels)+
   theme(axis.text.x = element_text(size=10,color="black"),
@@ -246,7 +254,7 @@ condtaxa<-DATA %>%
         axis.text.y = element_text(size=10,color="black"),
         axis.title.y = element_text(size=14,color="black"))+theme(legend.position="none")
 condtaxa
-  ggsave("condtaxa.png",condtaxa,width=6.5,height=3.3,units="in",dpi=300)
+  #ggsave("condtaxa.png",condtaxa,width=6.5,height=3.3,units="in",dpi=300)
 
 
 iontaxa<-DATA %>% 
@@ -308,12 +316,12 @@ Sodium.taxa<-Sodium %>%
   filter(!is.na(Max_Concentration_ppm)) %>%
   filter(!is.na(Min_Concentration_ppm)) %>%
   mutate(Min_Concentration_ppm = ifelse(Min_Concentration_ppm < 1, 1, Min_Concentration_ppm)) %>%
-  ggplot(aes(x = Taxonomic_classification, y = Max_Concentration_ppm))+  theme_classic() +
+  ggplot(aes(x = Taxonomic_classification, y = Min_Concentration_ppm))+  theme_classic() +
   scale_y_log10(limits = c(1,1000000),
                 breaks = trans_breaks("log10", function(x) 10^x),             #Don't change
                 labels = trans_format("log10", math_format(10^.x)))+ 
-  geom_violin(aes(fill= "orange"), alpha = 0.3)+
-  geom_violin(aes(y = Min_Concentration_ppm, fill = "blue"), alpha = 0.3)+
+  geom_violin(aes(fill= "orange"), alpha = 0.3, scale="count")+
+  geom_violin(aes(y = Max_Concentration_ppm, fill = "blue"), alpha = 0.3, scale="count")+
   labs(title= expression('Na'^'+'), 
        x="Taxonomic Classification",
        y="Ion Concentration (ppm)")+
@@ -324,7 +332,7 @@ Sodium.taxa<-Sodium %>%
         axis.text.y = element_text(size=10,color="black"),
         axis.title.y = element_blank())+theme(legend.position="none")
 Sodium.taxa
-  ggsave("Sodiumtaxa1.tiff",Sodium.taxa,width=3.25,height=2.83,units="in",dpi=300)
+  #ggsave("Sodiumtaxa1.tiff",Sodium.taxa,width=3.25,height=2.83,units="in",dpi=300)
 
 
 #Potassium by Taxa Boxplot
